# TCN

./: pyproject.toml
TCN/: tcn.py
TCN/adding_problem/: add_test.py  utils.py
TCN/char_cnn/: char_cnn_test.py  model.py  utils.py
TCN/copy_memory/: copymem_test.py  utils.py
TCN/lambada_language/: lambada_test.py  utils.py
TCN/mnist_pixel/: model.py  pmnist_test.py  utils.py
TCN/poly_music/: music_test.py
TCN/stock_price_prediction/: GOOG.csv  UNH.csv  VUSA.L.csv  backtest.ipynb  model.py  process_raw.ipynb  stock_test.py  utils.py
TCN/stock_price_prediction/.ipynb_checkpoints/: process_raw-checkpoint.ipynb
TCN/word_cnn/: model.py  utils.py  word_cnn_test.py
