[tool.poetry]
name = "tcn"
version = "0.1.0"
description = ""
authors = ["Arthur Berkley <arthur.berkley@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.Dev.dependencies]
jupyterlab = "^4.0.2"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
